# CG

./: project_360_visual.cpp  project_360_visual.h  projection.cpp  projection.h
MasterThesis/: CMakeLists.txt
MasterThesis/src/: project_360_visual.cpp  projection.cpp
TestCode/: test.cpp  test.h
opengl/: CMakeLists.txt  opengl.sln
opengl/Debug/: opengl.ilk
opengl/include/: indexBuffer.h  render.h  texture.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h
opengl/opengl/: opengl.vcxproj  opengl.vcxproj.filters  shader.h
opengl/opengl/Debug/: vc142.idb
opengl/opengl/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl/opengl/Release/opengl.tlog/: opengl.lastbuildstate
opengl/opengl/res/shaders/: basic.shader
opengl/opengl/x64/Debug/: vc142.idb
opengl/opengl/x64/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
opengl/opengl/x64/Release/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  opengl.lastbuildstate
opengl/src/: indexBuffer.cpp  main.cpp  render.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
opengl/x64/Debug/: opengl.ilk
